Chapter 4 : Bootstrap Distributions

--- a/Python/Sampling in Python/takeaways.ipynb
+++ b/Python/Sampling in Python/takeaways.ipynb
@@ -160,7 +160,8 @@
     "\t- The width of the distribution of means gets narrower with larger sample size\n",
     "- Standard error\n",
     "\t- Standard deviation of the means of sample distributions\n",
-    "- The amount of variation in the sampling distribution is related to the amount of variation in the population and the sample size. This is another consequence of the Central Limit Theorem."
+    "- The amount of variation in the sampling distribution is related to the amount of variation in the population and the sample size. This is another consequence of the Central Limit Theorem.\n",
+    "- Bootstrapping : use sampling with replacement from a sample to build theoretical population parameter by augmenting/simulating a larger artificial population dataset"
    ]
   },
   {
@@ -185,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulate dice roll"
+    "### Simulate Dice Roll"
    ]
   },
   {
@@ -193,12 +194,13 @@
    "metadata": {},
    "source": [
     "```\n",
-    "sample_means_1000 = []\n",
-    "# Simulate and store mean for visualizing sampling distribution\n",
-    "for i in range(1000): \n",
-    "    sample_means_1000.append( np.random.choice(list(range(1,7)), size=4, replace=True).mean() )\n",
-    "# Visualize distribution\n",
-    "plt.hist(sample_means_1000, bins=20)\n",
+    "# high depends on what type of dice you are playing with\n",
+    "# size depends on how many dice you want to play with\n",
+    "# If you consider playing with 10 coins as dices, then high = 2 (1 coin has 2 sides) and no_of_dice = 10\n",
+    "# If you consider playing with 5 ludo dices, then high = 6 (1 dice has 6 sides) and no_of_dice = 5\n",
+    "# replace=True for any previous occurrence is likely to occur again\n",
+    "import numpy as np\n",
+    "simulation = np.random.choice(list(range(1,high+1)), size=no_of_dice, replace=True)\n",
     "```"
    ]
   },
@@ -234,6 +236,81 @@
     "np.quantile(df['col'], [0, 0.25, 0.5, 0.75, 1])\n",
     "# iqr \n",
     "scipy.stats.iqr(df['col'])\n",
+    "from scipy.stats import norm\n",
+    "# Sort the values in the column for CDF and inverse CDF\n",
+    "sorted_col = np.sort(df['col'])\n",
+    "# Calculate PDF using a probability distribution (e.g., normal distribution)\n",
+    "pdf_values = norm.pdf(sorted_col, loc=df['col'].mean(), scale=df['col'].std())\n",
+    "# Calculate CDF\n",
+    "cdf_values = norm.cdf(sorted_col, loc=df['col'].mean(), scale=df['col'].std())\n",
+    "# Calculate Inverse CDF (Quantiles)\n",
+    "quantiles_values = norm.ppf(np.linspace(0, 1, len(sorted_col)), loc=df['col'].mean(), scale=df['col'].std())\n",
+    "\n",
+    "# Visualize PDF, CDF, Inverse CDF\n",
+    "result_df = pd.DataFrame({\n",
+    "    'col': sorted_col,\n",
+    "    'PDF': pdf_values,\n",
+    "    'CDF': cdf_values,\n",
+    "    'Quantiles': quantiles_values\n",
+    "})\n",
+    "sns.lineplot(x='col', y='PDF', data=result_df)\n",
+    "sns.lineplot(x='col', y='CDF', data=result_df)\n",
+    "sns.scatterplot(x='col', y='Quantiles', data=result_df)\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- population standard deviation : Standard error of bootstrap distribution * square root of sample size \n",
+    "- If sampling has bias, then bootstrapping with that sample will also introduce bias.\n",
+    "- confidence interval : \n",
+    "    - a range of unknown quantity around the mean with an estimate of standard deviation\n",
+    "    - `(mean - 1*std , mean + 1* std)`\n",
+    "- Probability Density function (PDF) = the bell curve, normal distribution\n",
+    "- Cumulative Density Function (CDF) = the S curve, area under the curve\n",
+    "- Inverse CDF = the flipped S curve, value of percentile for confidence interval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bootstrapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# All possible combination of dice rolls\n",
+    "from itertools import product\n",
+    "die1 = die2 = die3 = die4 = die5 = [1,2,3,4,5,6,7,8]\n",
+    "dice = pd.DataFrame(list(product(die1, die2, die3, die4, die5 )), columns=['die1', 'die2', 'die3', 'die4', 'die5'])\n",
+    "\n",
+    "# Bootstrapping example 1 : Simulating dice roll\n",
+    "sample_means_1000 = []\n",
+    "# Simulate 1000 turns of 4 dice rolls\n",
+    "for i in range(1000): \n",
+    "    sample_means_1000.append( np.random.choice(list(range(1,7)), size=4, replace=True).mean() )\n",
+    "# Visualize distribution\n",
+    "plt.hist(sample_means_1000, bins=20)\n",
+    "\n",
+    "# Bootstrapping example 2 : Resampling from existing sample\n",
+    "import numpy as np\n",
+    "sample_means = []\n",
+    "for i in range(1000):\n",
+    "\tsample_means.append(np.mean(df.sample(frac=1, replace=True)['col']))\n",
     "```"
    ]
   }
