--- a/Python/Hypothesis Testing in Python/takeaways.ipynb
+++ b/Python/Hypothesis Testing in Python/takeaways.ipynb
@@ -25,8 +25,11 @@
     "    - Testing Method : Compute sample mean and see the difference between guessed mean and sample mean. Measure if the difference is significant or not.\n",
     "    - Solution:\n",
     "        - z-test\n",
+    "        - proportion z-test\n",
     "        - t-test\n",
     "        - ANOVA\n",
+    "        - chi-square test of independence\n",
+    "        - Chi-square goodness of fit\n",
     "- A/B Testing : Hypothesis testing on 2 different scenarios (control vs treatment group)\n",
     "- p-value : \n",
     "    - probability of obtaining a result if the null hypothesis is true\n",
@@ -64,6 +67,10 @@
     "        - find z-score = (sample mean - guessed or hypothesis mean) / standard daviation of bootstrap distribution\n",
     "        - convert z-score to p-value\n",
     "        - Compare p-value with significance level\n",
+    "- Proportions z-test\n",
+    "    - calculates if the difference in proportion of two categories across two variables have any significance\n",
+    "    - Gives idea if two categorical columns have any association\n",
+    "    - small p-value means the variables have association\n",
     "- t-test \n",
     "    -  hypothesis testing on two-sample problem and allows more uncertainty for two variables\n",
     "    - When a sample standard deviation is used in estimating a standard error instead of population parameters.\n",
@@ -79,7 +86,16 @@
     "- ANOVA test\n",
     "    - hypothesis testing on more than 2 groups\n",
     "    - high chance of False Positive with more number of groups. use correction method to adjust p-values\n",
-    "    "
+    "- Chi-square test of independence\n",
+    "    - calculates if the difference in proportion of multiple categories across two variables have any significance\n",
+    "    - Gives the idea if the two categorical variables are statistically independent of each other\n",
+    "    - Statistical independence - proportion of successes in the response variable is the same across all categories of the explanatory variable\n",
+    "    - p-value < significance level means the variables are not independent. Instead, they are associated\n",
+    "    - No direction or tail or alternative argument since it is squared (Always right tailed test)\n",
+    "- Chi-square goodness of fit\n",
+    "    - Checks whether the hypothesised proportion are a good fit for the sample proportion\n",
+    "    - Used to compare the proportion of a categorical variable's distribution across different dataset \n",
+    "    - if p-value < significance level then we can say that the hypothesised proportion is not a good fit of the sample proportion"
    ]
   },
   {
@@ -102,8 +118,28 @@
     "# ANOVA test (All possible combination of groups)\n",
     "pingouin.anova(data=df, dv=\"col\", between=\"cat_col\")\n",
     "pingouin.pairwise_tests(data=df, dv=\"col\", between=\"cat_col\", padjust=\"bonf\")\n",
+    "\n",
+    "# Proportion Z-test\n",
+    "from statsmodels.stats import proportion\n",
+    "z_score, p_val = proportion.proportions_ztest(count=[len(df[(df['cat_col1'] == 'A') & (df['cat_col2'] == 'X')]),\n",
+    "                                            len(df[(df['cat_col1'] == 'B') & (df['cat_col2'] == 'X')])],\n",
+    "                                      nobs=[len(df[df['cat_col1'] == 'A']),\n",
+    "                                            len(df[df['cat_col1'] == 'B'])])\n",
+    "# Chi-square test of independence\n",
+    "expected, observed, stats = pingouin.chi2_independence(data=df, x=\"catcol1\", y=\"catcol2\")\n",
+    "print(stats)\n",
+    "\n",
+    "\n",
+    "# Perform chi-square goodness-of-fit test between two groupby dataframe results\n",
+    "from scipy.stats import chi2_contingency\n",
+    "chi2, p, _ = chi2_contingency([df1[\"col\"], df2[\"col\"]])\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
