Chapter 4 : Non-Parametric Tests

--- a/Python/Hypothesis Testing in Python/takeaways.ipynb
+++ b/Python/Hypothesis Testing in Python/takeaways.ipynb
@@ -30,6 +30,9 @@
     "        - ANOVA\n",
     "        - chi-square test of independence\n",
     "        - Chi-square goodness of fit\n",
+    "        - Non-parametric Wilcoxon-signed rank test \n",
+    "        - Non-parametric Wilcoxon-Mann-Whitney test\n",
+    "        - Non-parametric Kruskal-Wallis test\n",
     "- A/B Testing : Hypothesis testing on 2 different scenarios (control vs treatment group)\n",
     "- p-value : \n",
     "    - probability of obtaining a result if the null hypothesis is true\n",
@@ -95,7 +98,22 @@
     "- Chi-square goodness of fit\n",
     "    - Checks whether the hypothesised proportion are a good fit for the sample proportion\n",
     "    - Used to compare the proportion of a categorical variable's distribution across different dataset \n",
-    "    - if p-value < significance level then we can say that the hypothesised proportion is not a good fit of the sample proportion"
+    "    - if p-value < significance level then we can say that the hypothesised proportion is not a good fit of the sample proportion\n",
+    "- Non-parametric tests\n",
+    "    - when sample size is very small (<30 for normal tests, < 10 for proportional tests, < 5 for chi-square tests)\n",
+    "    - When the distribution is not normal\n",
+    "- Non-parametric Wilcoxon-signed rank test :\n",
+    "    - Works well with paired data\n",
+    "    - Takes the elementwise difference between 2 columns \n",
+    "    - Take the absolute value of the differences\n",
+    "    - Rank the absolute values\n",
+    "    - Split them into two parts. Add all ranks for values that were less than zero and add all ranks for values that were greater than zero\n",
+    "    - take the minimum of the two sum\n",
+    "- Non-parametric Wilcoxon-Mann-Whitney test:\n",
+    "    - Works well with unpaired data of two categories\n",
+    "    - requires to convert data from long to wide format\n",
+    "- Non-parametric Kruskal-Wallis test:\n",
+    "    - Works well for data with multiple categories"
    ]
   },
   {
@@ -133,13 +151,66 @@
     "# Perform chi-square goodness-of-fit test between two groupby dataframe results\n",
     "from scipy.stats import chi2_contingency\n",
     "chi2, p, _ = chi2_contingency([df1[\"col\"], df2[\"col\"]])\n",
+    "\n",
+    "# Non-parametric wilcoxon signed rank for paired t-test\n",
+    "pingouin.wilcoxon(x=df['col1'], y=df['col2'], alternative=\"less\")\n",
+    "\n",
+    "# Non-parametric Wilcoxon-Mann-Whitney test for unpaired two categories t-test\n",
+    "df_wide = df.pivot(columns='cat_col',values='num_col')\n",
+    "pingouin.mwu(x=df_wide['cat1'], y=df_wide['cat2'], alternative='greater')\n",
+    "\n",
+    "# Non-parametric Kruskal-Wallis test for ANOVA / multiple categories\n",
+    "pingouin.kruskal(data=df, dv='num_col', between='cat_col')\n",
+    "\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Used to determine relationship between 2 categorical variables.\n",
+    "- It tests for association between 2 variables and tells us how likely\n",
+    "- the is association due to chance \n",
+    "- The test assumes (null hypothesis) that the variables are independent.\n",
+    "- The the model does not fit, then that proves that the variables are dependent.\n",
+    "\n",
+    "calculation steps: \n",
+    "\n",
+    "- use contigency table for observed values from a dataset.\n",
+    "- on contigency table,  for each cell, (row total * column total)/grand total\n",
+    "- this will create table with expected value \n",
+    "- calculate chi square value: SUM((observed-expected)^2 / expected)\n",
+    "- determine p-value for that chi square value\n",
+    "- if p<0.05, then the variables are not independent (Reject null)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Sampled data must be randomly collected from the population\n",
+    "- Size of dataset (Our generic assumption for parametric hypothesis tests)\n",
+    "    - for normal tests : 30 sample data\n",
+    "    - for proportion tests : 10 for each categorical data\n",
+    "    - for chi-square tests : 5 for each categorical class\n",
+    "    - sanity check : bootstrap distribution should be normally distributed\n",
+    "- Otherwise do non-parametric hypothesis tests"
+   ]
   }
  ],
  "metadata": {
