Chapter 3 : Fine-Tuning Your Model

--- a/Python/Supervised Learning with scikit-learn/takeaways.ipynb
+++ b/Python/Supervised Learning with scikit-learn/takeaways.ipynb
@@ -275,6 +275,176 @@
     "plt.show()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Accuracy is not a good metric for all cases. eg: class imbalanced dataset\n",
+    "- accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
+    "- precision = TP / (TP + FP)\n",
+    "- High precision = lower false positive rate\n",
+    "- recall = TP / (TP + FN)\n",
+    "- High recall = lower false negative rate\n",
+    "- f1 = 2 * (precision * recall) / (precision + recall)\n",
+    "- ROC AUC = area under the curve of TP rate vs FP rate graph\n",
+    "- Hyperparameter tuning = \n",
+    "    - Hyperparameters are Parameters we specify before fitting the model\n",
+    "    - We compare model outcomes by changing these hyperparametes \n",
+    "    - Use cross-validation to avoid overfitting\n",
+    "    - example : gridsearch\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Regression Performance Measurement\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "r2_score(y_true, y_pred) # R-squared\n",
+    "mse = mean_squared_error(y_true, y_pred) # MSE\n",
+    "rmse = mean_squared_error(y_test, y_pred, squared=False) # RMSE\n",
+    "mae = mean_absolute_error(y_true, y_pred) # MAE\n",
+    "\n",
+    "# Classification Performance Measurement\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, jaccard_score, log_loss, roc_auc_score, roc_curve, f1_score\n",
+    "confusion_matrix(y_test, y_pred) # Confusion matrix\n",
+    "classification_report(y_test, y_pred) # TP, FP, TN, FN\n",
+    "jaccard_score(y_test, y_pred,pos_label=0) # Jaccard score\n",
+    "log_loss(y_test, y_pred_prob) # log loss\n",
+    "print(roc_auc_score(y_test, y_pred_prob)) # ROC AUC\n",
+    "print(f1_score(y_true, y_pred)) # F1 Score\n",
+    "\n",
+    "# Visualize ROC Curve\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, y_pred_probs)\n",
+    "plt.plot([0, 1], [0, 1], 'k--')\n",
+    "plt.plot(fpr, tpr)\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Logistic Regression ROC Curve')\n",
+    "plt.show()\n",
+    "\n",
+    "# Grid-search example for hyperparameter tuning of classification\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, KFold\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "param_grid = {\"alpha\": np.arange(0.0001, 1, 10), \"solver\": [\"sag\", \"lsqr\"]}\n",
+    "ridge = Ridge()\n",
+    "ridge_cv = GridSearchCV(ridge, param_grid, cv=kf)\n",
+    "ridge_cv2 = RandomizedSearchCV(ridge, param_grid, cv=kf, n_iter=2)\n",
+    "ridge_cv.fit(X_train, y_train)\n",
+    "print(ridge_cv.best_params_, ridge_cv.best_score_)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It is a classification problem\n",
+    "- It is called regression because it calculates continuous value (sigmoid / likelihood /probability) \n",
+    "- It compares threshold value with probability to reach conclusion \n",
+    "- It works well for data with 2 class that is linearly separable by a line (decision boundary)\n",
+    "- For multiple classes, use softmax\n",
+    "- Logistic regression only calculates probability of positive (target) class only. subtracting from 1 will give us probability of negative class\n",
+    "- Training process:\n",
+    "    1. Initializes theta (co-efficients) with random values\n",
+    "    2. Calculate sigmoid (probability) of output for a case\n",
+    "    3. compare this probability with actual output and record this difference as error\n",
+    "    4. Calculate this error for all training cases. Total error is the cost of the model (known as cost function. eg: MSE)\n",
+    "    5. Change theta in such a way that it reduces total cost (optimization algorithm like gradient descent)\n",
+    "    6. Iterate from step 2 until the model is satisfactory enough with low cost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "# Specify independent and dependent features\n",
+    "X = np.asarray(df[['A', 'B', 'C', 'D', 'E', 'F', 'G']])\n",
+    "y = np.asarray(df['target'])\n",
+    "\n",
+    "# Preprocess dataset\n",
+    "from sklearn import preprocessing\n",
+    "X = preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "\n",
+    "# Split into train and test set\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.2, random_state=4)\n",
+    "\n",
+    "# Train the model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "LR = LogisticRegression(C=0.01, solver='liblinear')\n",
+    "LR.fit(X_train,y_train)\n",
+    "\n",
+    "# Predict the test set\n",
+    "y_pred = LR.predict(X_test)\n",
+    "\n",
+    "# See classification report and confusion matrix\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "classification_report(y_test, y_pred)\n",
+    "confusion_matrix(y_test, y_pred, labels=[1,0])\n",
+    "\n",
+    "# Predicted probability on test set for positive/target class\n",
+    "y_pred_prob = LR.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Evaluate the model\n",
+    "from sklearn.metrics import jaccard_score\n",
+    "jaccard_score(y_test, y_pred,pos_label=0)\n",
+    "\n",
+    "from sklearn.metrics import log_loss\n",
+    "log_loss(y_test, y_pred_prob)\n",
+    "\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "print(roc_auc_score(y_test, y_pred_prob))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear vs Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- Linear regression:\n",
+    "    - Finds a line that fits and aligns tightly with the data\n",
+    "    - goal: line is the trend, any new value will appear *ON* the line\n",
+    "    - Predicts the value itself\n",
+    "    - Predicted value is a continuous value that exceeds 0 or 1\n",
+    "- Logistic regression\n",
+    "    - Finds a line / plane that separates the data by maximizing the distance\n",
+    "    - goal : Line is a no-man's land. New value will appear on *EITHER SIDE* of the line\n",
+    "    - predicts which class will the value fall in (sigmoid of the value)."
+   ]
   }
  ],
  "metadata": {
