Chapter 4 : Preprocessing and Pipelines

--- a/Python/Supervised Learning with scikit-learn/takeaways.ipynb
+++ b/Python/Supervised Learning with scikit-learn/takeaways.ipynb
@@ -294,19 +294,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Accuracy is not a good metric for all cases. eg: class imbalanced dataset\n",
-    "- accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
-    "- precision = TP / (TP + FP)\n",
-    "- High precision = lower false positive rate\n",
-    "- recall = TP / (TP + FN)\n",
-    "- High recall = lower false negative rate\n",
-    "- f1 = 2 * (precision * recall) / (precision + recall)\n",
-    "- ROC AUC = area under the curve of TP rate vs FP rate graph\n",
+    "- Classification:\n",
+    "    - Accuracy is not a good metric for all cases. eg: class imbalanced dataset\n",
+    "    - accuracy = (TP + TN)/ (TP + TN + FP + FN)\n",
+    "    - precision = TP / (TP + FP)\n",
+    "    - High precision = lower false positive rate\n",
+    "    - recall = TP / (TP + FN)\n",
+    "    - High recall = lower false negative rate\n",
+    "    - f1 = 2 * (precision * recall) / (precision + recall)\n",
+    "    - ROC AUC = area under the curve of TP rate vs FP rate graph\n",
+    "    - jaccard score\n",
+    "    - log loss\n",
+    "- Regression:\n",
+    "    - r-squared : Percentage of variability of y explained by independent variable\n",
+    "    - RMSE : Average error in target\n",
+    "    - MAE : Average absolute error in target\n",
     "- Hyperparameter tuning = \n",
     "    - Hyperparameters are Parameters we specify before fitting the model\n",
     "    - We compare model outcomes by changing these hyperparametes \n",
     "    - Use cross-validation to avoid overfitting\n",
-    "    - example : gridsearch\n"
+    "    - example : gridsearch\n",
+    "- Use boxplot of cross-validation results of different models to compare their distribution of scores"
    ]
   },
   {
@@ -420,6 +428,11 @@
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "print(roc_auc_score(y_test, y_pred_prob))\n",
+    "\n",
+    "### Compare different models distribution\n",
+    "results = {\"Model 1\": model1_cv_results, \"Model 2\": model2_cv_results, \"Model 3\": model3_cv_results}\n",
+    "plt.boxplot(results.values(), labels=results.keys())\n",
+    "plt.show()\n",
     "```"
    ]
   },
@@ -444,6 +457,116 @@
     "    - Finds a line / plane that separates the data by maximizing the distance\n",
     "    - goal : Line is a no-man's land. New value will appear on *EITHER SIDE* of the line\n",
     "    - predicts which class will the value fall in (sigmoid of the value)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- dropping/ imputing : Dealing with missing data \n",
+    "- one hot encoding : For regression to create dummy numeric features from categorical data \n",
+    "- scaling and centering: \n",
+    "    - standardization : \n",
+    "        - features are centered around zero and have a variance of one\n",
+    "        - Standardized value (z) = (x - mean) / standard deviation\n",
+    "        - Range is -1 to 1\n",
+    "    - normalization : \n",
+    "        - subtract the minimum and divide by the range\n",
+    "        - Normalized value = (x - min) / (max - min)\n",
+    "        - Range 0 to 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### One-hot encoding : turn categorical values into numeric dummy values\n",
+    "df_dummies = pd.get_dummies(df[\"target\"], drop_first=True)\n",
+    "df_numeric = pd.concat([df, df_dummies], axis=1)\n",
+    "df_ready = df_numeric.drop(\"target\", axis=1)\n",
+    "\n",
+    "### drop Missing values\n",
+    "print(df.isna().sum().sort_values())\n",
+    "df = df.dropna(subset=column_list)\n",
+    "\n",
+    "### Impute missing values\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "y = df[\"target\"].values\n",
+    "X_cat = df[\"cat_col\"].values.reshape(-1, 1)\n",
+    "X_num = df.drop([\"cat_col\", \"target\"], axis=1).values\n",
+    "X_train_cat, X_test_cat, y_train, y_test = train_test_split(X_cat, y, test_size=0.2, random_state=12)\n",
+    "X_train_num, X_test_num, y_train, y_test = train_test_split(X_num, y, test_size=0.2, random_state=12)\n",
+    "# Imputing most frequent category for categorical column imputation\n",
+    "imp_cat = SimpleImputer(strategy=\"most_frequent\")\n",
+    "X_train_cat = imp_cat.fit_transform(X_train_cat) # Both fit and transform\n",
+    "X_test_cat = imp_cat.transform(X_test_cat) # Only transform since the dataset was fit previously\n",
+    "# Imputing default median for numeric column imputation\n",
+    "imp_num = SimpleImputer()\n",
+    "X_train_num = imp_num.fit_transform(X_train_num) # Both fit and transform\n",
+    "X_test_num = imp_num.transform(X_test_num) # Only transform since the dataset was fit previously\n",
+    "X_train = np.append(X_train_num, X_train_cat, axis=1)\n",
+    "X_test = np.append(X_test_num, X_test_cat, axis=1)\n",
+    "\n",
+    "### Scaling (Only happens on X, never touch y)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "\n",
+    "X = df.drop(\"target\", axis = 1).values\n",
+    "y = df[\"target\"].values\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=21)\n",
+    "\n",
+    "# Define sequential stages of your model (Only the last step should contain model, others are transformers)\n",
+    "steps = [('scale',StandardScaler()), \n",
+    "         ('knn', KNeighborsClassifier())]\n",
+    "parameters = {\"knn__n_neighbors\": np.arange(1, 50)} # Use format: step-name + __ + parameter_name \n",
+    "# Construct the pipeline\n",
+    "pipeline = Pipeline(steps)\n",
+    "# Push the pipeline in the grid\n",
+    "cv = GridSearchCV(pipeline, param_grid=parameters)\n",
+    "# Train\n",
+    "cv.fit(X_train, y_train)\n",
+    "# Predict\n",
+    "y_pred = cv.predict(X_test)\n",
+    "\n",
+    "```"
    ]
   }
  ],
