Chapter 2 : Predictions and model objects

--- a/Python/Introduction to Regression with statsmodels in Python/takeaways.ipynb
+++ b/Python/Introduction to Regression with statsmodels in Python/takeaways.ipynb
@@ -31,6 +31,17 @@
     "cat_model = ols(\"y ~ x_cat + 0\", data=df).fit()\n",
     "# See model params : slope m and intercept c\n",
     "print(cat_model.params)\n",
+    "# See prediction on original fitted data \n",
+    "print(num_model.fittedvalues)\n",
+    "# See residuals\n",
+    "print(model.resid)\n",
+    "# Model summary\n",
+    "model.summary()\n",
+    "# Create test data\n",
+    "test_data = pd.DataFrame({\"x_num\": np.arange(20, 41)})\n",
+    "# Predict on test data\n",
+    "print(num_model.predict(test_data))\n",
+    "# NOTE : You can transform the X and y before fitting and then train. You can predict with the model and the predicted values should be back-transformed for y if y was transformed.\n",
     "```"
    ]
   },
@@ -39,6 +50,16 @@
    "metadata": {},
    "source": [
     "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Response value = fitted value + residuals\n",
+    "- Regression to the mean : extreme cases don't persist over time, they occur due to randomness \n",
+    "- Non-linear data may work well with transformation\n",
+    "- You may have to transform X, y or both before training or fitting. You need to reverse the transformation result after prediction to interpret the result"
    ]
   },
   {
